Implement backend endpoint and frontend api
