# backend/internal/handler/user_settings_types.go
@@ -1,0 +1,5 @@
+package handler
+
+type UpdatePreferredLanguageRequest struct {
+	PreferredLanguage string `json:"preferred_language`
+}
